# pysilverse

./: .gitignore  CHANGELOG.md  Dockerfile.dev  README.md  clean.sh  development.sh  release.md  setup.cfg
.github/workflows/: release.yml
silverse/: __init__.py  auth.py  lib.py  routes.py  service.py  validation.py  version.py
