[metadata]
name = pysilverse
version = 0.1
author = Erick Salas
author_email = it@silversestores.com
description = Common Silverse Development Module
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
